test/syntax/errors/13_bare_dot.sg
// expect-error: parse error
// A bare dot is not a valid statement.
import io

io.print("before")
.
io.print("after")
